--- a/.argocd/site-staging-green.yaml
+++ b/.argocd/site-staging-green.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: nextjs-project
   source:
-    repoURL: https://github.com/donanroherty/turborepo-github-actions.git
+    repoURL: https://github.com/donanroherty/gitops.git
     # targetRevision: main
     path: kubernetes/overlays/green
     kustomize:
