--- a/kubernetes/overlays/blue/blue-deployment.yaml
+++ b/kubernetes/overlays/blue/blue-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nextjs-app-blue
-  namespace: argocd
+  namespace: nextjs-app
   labels:
     app: nextjs-app
     version: blue
