--- a/kubernetes/preview-service.yaml
+++ b/kubernetes/preview-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nextjs-app-preview
-  namespace: argocd
+  namespace: nextjs-app
 spec:
   selector:
     app: nextjs-app
