--- a/.argocd/project.yaml
+++ b/.argocd/project.yaml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: nextjs-project
-  namespace: nextjs-app
+  name: service-hub-project
+  namespace: service-hub-ns
 spec:
   description: Project for Next.js application and related services
   sourceRepos:
     - '*'
   destinations:
-    - namespace: nextjs-app
+    - namespace: service-hub-ns
       server: https://kubernetes.default.svc
   roles:
     - name: read-only
       description: Read-only access to the project
       policies:
-        - p, proj:nextjs-project:read-only, applications, get, nextjs-project/*, allow
+        - p, proj:service-hub-project:read-only, applications, get, service-hub-project/*, allow
         - p, proj:n
