--- a/.argocd/site-staging-blue.yaml
+++ b/.argocd/site-staging-blue.yaml
@@ -2,9 +2,9 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: site-staging-blue
-  namespace: nextjs-app
+  namespace: service-hub-ns
 spec:
-  project: nextjs-project
+  project: service-hub-project
   source:
     repoURL: https://github.com/donanroherty/gitops.git
     targetRevision: main
@@ -14,7 +14,7 @@ spec:
       - ghcr.io/donanroherty/turborepo-github-actions/site:staging
   destination:
     server: https://kubernetes.default.svc
-    namespace: nextjs-app
+    namespace: service-hub-ns
   syncPolicy:
     automated:
       prune: true
