--- a/.argocd/site-app-green.yaml
+++ b/.argocd/site-app-green.yaml
@@ -1,17 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: site-staging-green
-  namespace: service-hub-ns
+  name: site-app-green
+  namespace: argocd
 spec:
   project: service-hub-project
   source:
     repoURL: https://github.com/donanroherty/gitops.git
-    targetRevision: main
     path: kubernetes/overlays/green
-    kustomize:
-      images:
-      - ghcr.io/donanroherty/turborepo-github-actions/site:staging
+    targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
     namespace: service-hub-ns
