--- a/kubernetes/overlays/blue/kustomization.yaml
+++ b/kubernetes/overlays/blue/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../base
+  - blue-rollout.yaml
 images:
   - name: ghcr.io/donanroherty/turborepo-github-actions/site
-    newTag: blue
+    newTag: v1.0.1
