--- a/kubernetes/service-active.yaml
+++ b/kubernetes/service-active.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-hub-app-preview
+  name: service-hub-app-active
   namespace: service-hub-ns
 spec:
   selector:
     app: service-hub-app
-    version: green
+    # version: <This will be dynamically selected by Argo Rollouts>
+  type: NodePort
   ports:
     - protocol: TCP
       port: 80
       targetPort: 3000
-      nodePort: 32175
-  type: NodePort
+      nodePort: 32174
