--- a/kubernetes/service-preview.yaml
+++ b/kubernetes/service-preview.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-hub-app-active
+  name: service-hub-app-preview
   namespace: service-hub-ns
 spec:
   selector:
     app: service-hub-app
-    version: blue
+    # version: <This will be dynamically selected by Argo Rollouts>
+  type: NodePort
   ports:
     - protocol: TCP
       port: 80
       targetPort: 3000
       nodePort: 32174
-  type: NodePort
