--- a/.argocd/project.yaml
+++ b/.argocd/project.yaml
@@ -2,17 +2,17 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: service-hub-project
-  namespace: service-hub-ns
+  namespace: argocd
 spec:
   description: Project for Next.js application and related services
   sourceRepos:
     - '*'
   destinations:
-    - namespace: service-hub-ns
+    - namespace: argocd
       server: https://kubernetes.default.svc
   roles:
     - name: read-only
       description: Read-only access to the project
       policies:
-        - p, proj:service-hub-project:read-only, applications, get, service-hub-project/*, allow
+        - p, proj:argocd:read-only, applications, get, argocd/*, allow
         - p, proj:n
