--- a/kubernetes/base/service.yaml
+++ b/kubernetes/base/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: service-hub-app
-  namespace: service-hub-ns
+  namespace: argocd
 spec:
   selector:
     app: service-hub-app
