--- a/kubernetes/service-active.yaml
+++ b/kubernetes/service-active.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: service-hub-app-active
-  namespace: service-hub-ns
+  namespace: argocd
 spec:
   selector:
     app: service-hub-app
