--- a/kubernetes/service-preview.yaml
+++ b/kubernetes/service-preview.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: service-hub-app-preview
-  namespace: service-hub-ns
+  namespace: argocd
 spec:
   selector:
     app: service-hub-app
@@ -12,4 +12,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3000
-      nodePort: 32174
+      nodePort: 32177
