--- a/kubernetes/service-active.yaml
+++ b/kubernetes/service-active.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-hub-app-active
+  name: rollout-bluegreen-active
   namespace: argocd
 spec:
   selector:
@@ -12,4 +12,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3000
-      nodePort: 32174
+      nodePort: 32173
