--- a/kubernetes/service-preview.yaml
+++ b/kubernetes/service-preview.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-hub-app-preview
+  name: rollout-bluegreen-preview
   namespace: argocd
 spec:
   selector:
@@ -12,4 +12,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3000
-      nodePort: 32177
+      nodePort: 32172
