--- a/.argocd/site-production.yaml
+++ b/.argocd/site-production.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: site-app-blue
+  name: site-production
   namespace: argocd
 spec:
   project: service-hub-project
