self hosted runner

--- a/.github/workflows/update-secrets.yml
+++ b/.github/workflows/update-secrets.yml
@@ -9,17 +9,11 @@ on:
 
 jobs:
   update-secrets:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
-      - name: Install Kubeseal
-        run: |
-          KUBESEAL_VERSION="0.26.1"
-          wget "https://github.com/bitnami-labs/sealed-secrets/releases/download/v${KUBESEAL_VERSION}/kubeseal-${KUBESEAL_VERSION}-linux-amd64.tar.gz"
-          tar -xvzf "kubeseal-${KUBESEAL_VERSION}-linux-amd64.tar.gz" kubeseal
-          sudo install -m 755 kubeseal /usr/local/bin/kubeseal
 
       - name: Setup Kubernetes config
         env:
@@ -27,6 +21,19 @@ jobs:
         run: |
           mkdir -p $HOME/.kube
           echo "$KUBECONFIG_BASE64" | base64 -d > $HOME/.kube/config
+
+      - uses: actions-hub/kubectl@master
+        env:
+          KUBE_CONFIG: ${{ secrets.KUBECONFIG_BASE64 }}
+        with:
+          args: get pods
+
+      - name: Install Kubeseal
+        run: |
+          KUBESEAL_VERSION="0.26.1"
+          wget "https://github.com/bitnami-labs/sealed-secrets/releases/download/v${KUBESEAL_VERSION}/kubeseal-${KUBESEAL_VERSION}-linux-amd64.tar.gz"
+          tar -xvzf "kubeseal-${KUBESEAL_VERSION}-linux-amd64.tar.gz" kubeseal
+          sudo install -m 755 kubeseal /usr/local/bin/kubeseal
 
       - name: Generate Docker configuration
         env:
@@ -40,14 +47,14 @@ jobs:
               }
             }
           }' > docker-config.json
-  
+
       - name: Create sealed secret
         env:
           GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          kubectl create secret docker-registry ghcr-auth --docker-server=ghcr.io --docker-username=$GITHUB_USERNAME --docker-password=$GITHUB_TOKEN --dry-run=client -o yaml > ghcr-auth-secret.yaml
-          kubeseal --format yaml --controller-name=sealed-secrets < ghcr-auth-secret.yaml > kubernetes/ghcr-auth-sealed-secret.yaml
+          kubectl --kubeconfig=$HOME/.kube/config create secret docker-registry ghcr-auth --docker-server=ghcr.io --docker-username=$GITHUB_USERNAME --docker-password=$GITHUB_TOKEN --dry-run=client -o yaml > ghcr-auth-secret.yaml
+          kubeseal --kubeconfig=$HOME/.kube/config --format yaml --controller-name=sealed-secrets < ghcr-auth-secret.yaml > kubernetes/ghcr-auth-sealed-secret.yaml
           rm ghcr-auth-secret.yaml
 
       - name: Commit and push changes
