--- a/kubernetes/argocd/site-production.yaml
+++ b/kubernetes/argocd/site-production.yaml
@@ -1,14 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: service-hub-root
+  name: site-production
   namespace: argocd
 spec:
   project: service-hub-project
   source:
     repoURL: https://github.com/donanroherty/gitops.git
-    path: .argocd
-    targetRevision: HEAD
+    path: kubernetes/overlays/production
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
