--- a/.github/workflows/update-secrets.yml
+++ b/.github/workflows/update-secrets.yml
@@ -1,66 +1,40 @@
-name: Update Secrets
+name: Sealed Secrets
 
 on:
   push:
     branches:
       - main
-  repository_dispatch:
-    types: [update-secrets]
 
 jobs:
-  update-secrets:
+  seal-secrets:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Setup Kubernetes config
-        env:
-          KUBECONFIG_BASE64: ${{ secrets.KUBECONFIG_BASE64 }}
-        run: |
-          mkdir -p $HOME/.kube
-          echo "$KUBECONFIG_BASE64" | base64 -d > $HOME/.kube/config
+    - name: Install kubeseal
+      run: |
+        wget https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.17.5/kubeseal-linux-amd64 -O kubeseal
+        sudo install -m 755 kubeseal /usr/local/bin/kubeseal
 
-      - uses: actions-hub/kubectl@master
-        env:
-          KUBE_CONFIG: ${{ secrets.KUBECONFIG_BASE64 }}
-        with:
-          args: get pods
+    - name: Connect to Kubernetes cluster
+      run: |
+        curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.24.0/bin/linux/amd64/kubectl
+        chmod +x kubectl
+        sudo mv kubectl /usr/local/bin/
+        echo "${{ secrets.KUBECONFIG }}" | base64 --decode > kubeconfig.yaml
+        kubectl --kubeconfig=kubeconfig.yaml get nodes
 
-      - name: Install Kubeseal
-        run: |
-          KUBESEAL_VERSION="0.26.1"
-          wget "https://github.com/bitnami-labs/sealed-secrets/releases/download/v${KUBESEAL_VERSION}/kubeseal-${KUBESEAL_VERSION}-linux-amd64.tar.gz"
-          tar -xvzf "kubeseal-${KUBESEAL_VERSION}-linux-amd64.tar.gz" kubeseal
-          sudo install -m 755 kubeseal /usr/local/bin/kubeseal
+    - name: Create Sealed Secret
+      run: |
+        kubectl --kubeconfig=kubeconfig.yaml create secret generic my-secret --dry-run=client --from-literal=foo=bar -o yaml | \
+          kubeseal --controller-name=sealed-secrets --controller-namespace=sealed-secrets --format=yaml --cert=pub-sealed-secrets.pem > kubernetes/secrets/my-secret.yaml
 
-      - name: Generate Docker configuration
-        env:
-          GITHUB_ACTOR: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo '{
-            "auths": {
-              "ghcr.io": {
-                "auth": "'$(echo -n $GITHUB_ACTOR:$GITHUB_TOKEN | base64)'"
-              }
-            }
-          }' > docker-config.json
-
-      - name: Create sealed secret
-        env:
-          GITHUB_USERNAME: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          kubectl --kubeconfig=$HOME/.kube/config create secret docker-registry ghcr-auth --docker-server=ghcr.io --docker-username=$GITHUB_USERNAME --docker-password=$GITHUB_TOKEN --dry-run=client -o yaml > ghcr-auth-secret.yaml
-          kubeseal --kubeconfig=$HOME/.kube/config --format yaml --controller-name=sealed-secrets < ghcr-auth-secret.yaml > kubernetes/ghcr-auth-sealed-secret.yaml
-          rm ghcr-auth-secret.yaml
-
-      - name: Commit and push changes
-        run: |
-          git config --global user.email "$GITHUB_USERNAME@users.noreply.github.com"
-          git config --global user.name "$GITHUB_USERNAME"
-          git add kubernetes/ghcr-auth-sealed-secret.yaml
-          git commit -m "Update sealed secrets"
-          git push
+    - name: Commit Sealed Secret
+      run: |
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
+        git add kubernetes/secrets/my-secret.yaml
+        git commit -m "Add Sealed Secret"
+        git push
