--- a/kubernetes/argocd/app-of-apps.yaml
+++ b/kubernetes/argocd/app-of-apps.yaml
@@ -12,6 +12,7 @@ spec:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
+    namespace: argocd
   syncPolicy:
     automated:
       prune: true
