--- a/kubernetes/base/deployment.yaml
+++ b/kubernetes/base/deployment.yaml
@@ -18,4 +18,15 @@ spec:
         ports:
         - containerPort: 3000
       imagePullSecrets:
-      - name: ghcr-auth
+        - name: ghcr-auth
+        env:
+        - name: GHCR_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: ghcr-auth
+              key: username
+        - name: GHCR_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: ghcr-auth
+              key: password
