--- a/manifests/argocd-config/app-of-apps.yaml
+++ b/manifests/argocd-config/app-of-apps.yaml
@@ -7,7 +7,7 @@ spec:
   project: service-hub-project
   source:
     repoURL: https://github.com/donanroherty/gitops.git
-    path: .argocd
+    path: manifests/argocd-config
     directory:
       recurse: true
   destination:
@@ -17,3 +17,4 @@ spec:
     automated:
       prune: true
       selfHeal: true
+
