--- a/manifests/argocd-config/argocd-deployment.yaml
+++ b/manifests/argocd-config/argocd-deployment.yaml
@@ -9,27 +9,10 @@ spec:
     matchLabels:
       app: argocd-server
   template:
-    metadata:
-      labels:
-        app: argocd-server
     spec:
       containers:
         - name: argocd-server
-          image: argoproj/argocd:v2.3.0
-          command:
-            - argocd-server
-            - --insecure
-            - --staticassets
-            - /shared/app
+          image: argoproj/argocd:v2.0.0
           envFrom:
             - secretRef:
-                name: argocd-vault-secrets
-          ports:
-            - containerPort: 8080
-            - containerPort: 8083
-          volumeMounts:
-            - name: static-files
-              mountPath: /shared/app
-      volumes:
-        - name: static-files
-          emptyDir: {}
+                name: argocd-secrets
