--- a/manifests/argocd-config/kustomization.yaml
+++ b/manifests/argocd-config/kustomization.yaml
@@ -1,4 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - manifests/apps/argocd/argocd-deployment.yaml
+  - argocd-deployment.yaml
+  - ../sealed-secrets/sealed-secrets.yaml
